@@ -226,6 +226,9 @@ BUGFIXES:
   ZOOKEEPER-2311: assert in setup_random
   (Marshall McMullen via rgs)
 
+  ZOOKEEPER-2304: JMX ClientPort from ZooKeeperServerBean incorrect
+  (Arshad Mohammad via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
